docs/0.14/_sources/api/gammapy.modeling.models.ExpCutoffPowerLaw3FGLSpectralModel.rst.txt
ExpCutoffPowerLaw3FGLSpectralModel
==================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ExpCutoffPowerLaw3FGLSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ExpCutoffPowerLaw3FGLSpectralModel.amplitude
      ~ExpCutoffPowerLaw3FGLSpectralModel.ecut
      ~ExpCutoffPowerLaw3FGLSpectralModel.index
      ~ExpCutoffPowerLaw3FGLSpectralModel.parameters
      ~ExpCutoffPowerLaw3FGLSpectralModel.reference
      ~ExpCutoffPowerLaw3FGLSpectralModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ExpCutoffPowerLaw3FGLSpectralModel.__call__
      ~ExpCutoffPowerLaw3FGLSpectralModel.copy
      ~ExpCutoffPowerLaw3FGLSpectralModel.create
      ~ExpCutoffPowerLaw3FGLSpectralModel.energy_flux
      ~ExpCutoffPowerLaw3FGLSpectralModel.energy_flux_error
      ~ExpCutoffPowerLaw3FGLSpectralModel.evaluate
      ~ExpCutoffPowerLaw3FGLSpectralModel.evaluate_error
      ~ExpCutoffPowerLaw3FGLSpectralModel.from_dict
      ~ExpCutoffPowerLaw3FGLSpectralModel.integral
      ~ExpCutoffPowerLaw3FGLSpectralModel.integral_error
      ~ExpCutoffPowerLaw3FGLSpectralModel.inverse
      ~ExpCutoffPowerLaw3FGLSpectralModel.plot
      ~ExpCutoffPowerLaw3FGLSpectralModel.plot_error
      ~ExpCutoffPowerLaw3FGLSpectralModel.spectral_index
      ~ExpCutoffPowerLaw3FGLSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: ecut
   .. autoattribute:: index
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
